cabal-version: 2.2
name: json-syntax
version: 0.2.2.0
synopsis: High-performance JSON parser and encoder
description:
  This library parses JSON into a @Value@ type that is consistent with the
  ABNF described in [RFC 7159](https://tools.ietf.org/html/rfc7159). The
  parser is about six times faster than the parser that `aeson` provides.
  This parser is however, non-resumable, so if resumable parsing is
  important, `aeson` should be preferred.
  .
  This library does not include any functions or typeclasses to help users
  marshal `Value` to their application-specific data types. Such functions
  and typeclasses are outside the scope of this library. If anyone writes a
  library that offers users these conveniences open a issue so that the
  @json-syntax@ documentation can point users to it.
homepage: https://github.com/byteverse/json-syntax
bug-reports: https://github.com/byteverse/json-syntax/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Json
    Json.Smile
  build-depends:
    , array-builder >=0.1 && <0.2
    , array-chunks >=0.1.3 && <0.2
    , base >=4.12 && <5
    , bytebuild >=0.3.10 && <0.4
    , byteslice >=0.1.3 && <0.3
    , bytesmith >=0.3.8 && <0.4
    , bytestring >=0.10.8 && <0.12
    , integer-gmp >=1.0 && <1.2
    , natural-arithmetic >=0.1.2 && <0.2
    , contiguous >=0.6 && <0.7
    , primitive >=0.7 && <0.8
    , run-st >=0.1.1 && <0.2
    , scientific-notation >=0.1.5 && <0.2
    , text-short >=0.1.3 && <0.2
    , word-compat >=0.0.3
    , zigzag >=0.0.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test, common
  main-is: Main.hs
  other-modules:
    Twitter100
  ghc-options: -Wall -O2
  build-depends:
    , QuickCheck >=2.14.2
    , aeson >=2.0.2
    , array-chunks
    , base >=4.12.0.0 && <5
    , bytebuild
    , byteslice >=0.1.3
    , bytestring
    , containers
    , json-syntax
    , neat-interpolation >=0.3.2
    , primitive
    , scientific
    , scientific-notation >=0.1.1
    , tasty >=1.2.3 && <1.3
    , tasty-hunit >=0.10.0.2 && <0.11
    , tasty-golden >=2.0 && <2.4
    , tasty-quickcheck >=0.10.1.2 && <0.11
    , text >=1.2
    , text-short
    , vector

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , bytebuild
    , byteslice
    , bytestring
    , gauge
    , json-syntax
    , neat-interpolation >=0.3.2
    , primitive
    , text >=1.2
    , scientific-notation >=0.1.1
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench, common
  main-is: Main.hs
  other-modules:
    Twitter100
    Url100
    Metrics1024
